extras/ssl-route-lb/lb-route-service.yaml
# Route load balances between two brokers
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  namespace: amqbroker-dev-openwire
  name: openwire
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: <route-url>
  to:
    kind: Service
    name: service-openwire
    weight: 100
  port:
    targetPort: amqp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

# This services are of type: ClusterIP - accessible only inside the cluster
# since we are using SSL, the brokers are exposed using SSL routes, so services don't need to be externally reachable
# the services should be created manually as the Operator creates services that matches a single broker. These Services match both brokers and load balance through them
---
apiVersion: v1
kind: Service
metadata:
  name: service-openwire
  namespace: amqbroker-dev
spec:
  type: ClusterIP
  ports:
    - port: 61616
      targetPort: 61616
      protocol: TCP
      name: openwire
  selector:
    ActiveMQArtemis: dev
    application: dev-app
